# nestle-rs

./: Cargo.toml  README.md
.github/workflows/: safety.yml  scheduled.yml  test.yml
examples/: Cargo.toml  crypto_instruments.rs
nestle/: Cargo.toml
nestle/src/: lib.rs
nestle_core/: Cargo.toml
nestle_core/src/: error.rs  lib.rs
nestle_core/src/macros/: attrs.rs  derive.rs  helpers.rs  mod.rs  parsed_attrs.rs
nestle_core/src/macros/snapshots/: nestle_core__macros__derive__tests__data_enum.snap  nestle_core__macros__derive__tests__named_struct.snap  nestle_core__macros__derive__tests__simple_enum.snap  nestle_core__macros__derive__tests__tuple_struct.snap
nestle_derives/: Cargo.toml
nestle_derives/src/: lib.rs
nestle_tests/: Cargo.toml
nestle_tests/tests/: common.rs  data_enum.rs  named_struct.rs  proptests.rs  simple.rs  tuple_struct.rs
nestle_tests/tests/common/: large_enum.rs  mod.rs
