[package]
name = "nestle"
version = "0.4.0"
edition = "2021"
description = "Nested integer enum tree structures"
license = "MIT"
repository = "https://github.com/Justice4Joffrey/nestle-rs"
keywords = []
readme = "../README.md"

[dependencies]
nestle_core = {path = "../nestle_core", version = "0.4.0"}
nestle_derives = {path = "../nestle_derives", version = "0.4.0"}


[package.metadata.docs.rs]
no-default-features = true
rustc-args = ["--cfg", "doc_cfg"]
rustdoc-args = ["--cfg", "doc_cfg"]
