[package]
name = "nestle_core"
license = "MIT"
version = "0.4.0"
edition = "2021"
description = "Nested integer enum tree structures"

[dependencies]
ahash = { version = "0.8"}
hashbrown = { version = "0.13", features = ["ahash"]}
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1.0.40"

[dev-dependencies]
colored-diff = "0.2.3"
insta = "1.26"
