[package]
name = "nestle_core"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Encode/decode arbitrary nested tree-structured data with a single integer"

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1.0.40"

[dev-dependencies]
colored-diff = "0.2.3"
insta = "1.26"
