[package]
name = "nestle_derives"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Nested integer enum tree structures"

[dependencies]
nestle_core = {path = "../nestle_core", version = "0.4.0"}

proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
proc-macro = true
